--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,16 @@
         "es2021": true,
         "node": true
     },
-    "extends": "standard",
+    "extends": "airbnb-base",
     "overrides": [
     ],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-unused-vars":"off",
+        "no-console":"off",
+        "linebreak-style":"off",
+        "arrow-body-style":"off"
     }
 }
