--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/server.js"
   },
   "author": "bintang",
   "license": "ISC",
   "devDependencies": {
-    "@hapi/hapi": "^20.2.2",
     "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
@@ -18,6 +18,7 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "@hapi/hapi": "^20.2.2",
     "nanoid": "^3.3.3"
   }
 }
