--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
         "no-unused-vars":"off",
         "no-console":"off",
         "linebreak-style":"off",
-        "arrow-body-style":"off"
+        "arrow-body-style":"off",
+        "no-shadow":"off",
+        "consistent-return":"off",
+        "no-undef":"off"
     }
 }
